Animaciones y 2da entrega del final

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <title>cotizalo</title>
     <script src="https://kit.fontawesome.com/65efb81e21.js" crossorigin="anonymous"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <a href="./index.html"><img class="imagenLogo" src="img/logo.png" alt="logo"></a>
+                <a href="./index.html"><img class="imagenLogo" class="animate__tada" src="img/logo.png" alt="logo"></a>
             </div>
             
             <a href="./index.html"><h6>INICIO</h6></a>
