funcion grid de bootstrap para el header

--- a/index.html
+++ b/index.html
@@ -14,23 +14,35 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="./index.html"><img class="imagenLogo" src="img/logo.png" alt="logo"></a>
+            <div class="row">
+                <div class="col">
+                    <div class="logo">
+                        <a href="./index.html"><img class="imagenLogo" src="img/logo.png" alt="logo"></a>
+                    </div>
+                </div>
             </div>
             
-            <a href="./index.html"><h6>INICIO</h6></a>
-            <div class="seeker">
-                <input text class="barSeeker" placeholder="buscar...">
-                <button class="buttonSeeker"><i class="fas fa-search"></i></button>
+            <div class="row">
+                <div class="col">
+                    <div class="seeker">
+                        <input text class="barSeeker" placeholder="buscar...">
+                        <button class="buttonSeeker"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
             </div>
-            <div class="register">
-                <button class="logIn"><a href="html/ingreso.html">INGRESAR</a></button>
-                <button class="signUp"><a href="html/registro.html">REGISTRAR</a></button>
+
+            <div class="row">
+                <div class="col">
+                    <div class="register">
+                        <button class="logIn"><a href="html/ingreso.html">INGRESAR</a></button>
+                        <button class="signUp"><a href="html/registro.html">REGISTRAR</a></button>
+                    </div>
+                    <button class="contactHeader">
+                        <a href="html/contactanos.html">Contactanos
+                        <i class="fab fa-whatsapp"></i></a>
+                    </button>
+                </div>
             </div>
-            <button class="contactHeader">
-                <a href="html/contactanos.html">Contactanos
-                <i class="fab fa-whatsapp"></i></a>
-            </button>
         </nav>
     </header>
     <nav class="navFilter">
